// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props.children="foo" renders correctly 1`] = `
<ForwardRef(WithStyles)
  className="Choice-button-1 "
  color="primary"
  onClick={[Function]}
>
  foo
</ForwardRef(WithStyles)>
`;

exports[`when props.className="foo" renders correctly 1`] = `
<ForwardRef(WithStyles)
  className="Choice-button-1 foo"
  color="primary"
  onClick={[Function]}
/>
`;

exports[`when props={} renders correctly 1`] = `
<ForwardRef(WithStyles)
  className="Choice-button-1 "
  color="primary"
  onClick={[Function]}
/>
`;
